RESOLVED FIXED48676
depthRange should generate INVALID_OPERATION if zNear is greater than zFar
https://bugs.webkit.org/show_bug.cgi?id=48676
Summary depthRange should generate INVALID_OPERATION if zNear is greater than zFar
Zhenyao Mo
Reported 2010-10-29 14:18:32 PDT
WebGL spec: 6.7 Viewport Depth Range The WebGL API does not support depth ranges with where the near plane is mapped to a value greater than that of the far plane. A call to depthRange will generate an INVALID_OPERATION error if zNear is greater than zFar.
Attachments
patch (3.70 KB, patch)
2010-11-03 17:26 PDT, Zhenyao Mo
kbr: review+
zmo: commit-queue-
Zhenyao Mo
Comment 1 2010-11-03 17:26:38 PDT
Created attachment 72888 [details] patch Fixing those super easy bugs are so much fun
Kenneth Russell
Comment 2 2010-11-03 17:40:03 PDT
Comment on attachment 72888 [details] patch Looks good.
Zhenyao Mo
Comment 3 2010-11-03 17:49:47 PDT
Note You need to log in before you can comment on or make changes to this bug.