2010-11-03  Zhenyao Mo  <zmo@google.com>

Reviewed by Kenneth Russell.

        depthRange should generate INVALID_OPERATION if zNear is greater than zFar
        https://bugs.webkit.org/show_bug.cgi?id=48676

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::depthRange):
2010-11-03  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        depthRange should generate INVALID_OPERATION if zNear is greater than zFar
        https://bugs.webkit.org/show_bug.cgi?id=48676

        * fast/canvas/webgl/webgl-specific-expected.txt:
        * fast/canvas/webgl/webgl-specific.html:


Canonical link: https://commits.webkit.org/61780@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71291 268f45cc-cd09-0410-ab3c-d52691b4dbfc